<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:text="@string/Input_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/InputText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:text="@string/City_Input"
        android:id="@+id/editCity"
        android:layout_below="@+id/InputText"
        android:layout_alignRight="@+id/InputText"
        android:layout_alignEnd="@+id/InputText"
        android:layout_marginTop="46dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GPS_Button"
        android:id="@+id/buttonGPS"
        android:layout_alignBottom="@+id/editCity"
        android:layout_toRightOf="@+id/editCity"
        android:layout_alignTop="@+id/editCity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Search"
        android:id="@+id/buttonSearch"
        android:layout_marginTop="112dp"
        android:layout_below="@+id/editBranche"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editBranche"
        android:text="@string/example_branche"
        android:layout_below="@+id/editCity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonSearch"
        android:layout_alignEnd="@+id/buttonSearch" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profil"
        android:id="@+id/buttonProfile"
        android:layout_alignTop="@+id/InputText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mit Profildaten Suchen"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
